--- a/index.html
+++ b/index.html
@@ -413,6 +413,7 @@
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.just-around-the-bend.css">
+    <link rel="stylesheet" href="css/calendar.kabara-island.css">
     <link rel="stylesheet" href="css/calendar.keep-cool.css">
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
@@ -460,6 +461,7 @@
     <link rel="stylesheet" href="css/calendar.magic-square.css">
     <link rel="stylesheet" href="css/calendar.magnificent-symbol.css">
     <link rel="stylesheet" href="css/calendar.main-stream.css">
+    <link rel="stylesheet" href="css/calendar.makogai-island.css">
     <link rel="stylesheet" href="css/calendar.mamanuca-islands.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
     <link rel="stylesheet" href="css/calendar.manchester-city.css">
@@ -1469,6 +1471,7 @@
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="jungle-nature">Jungle Nature</option>
                 <option value="just-around-the-bend">Just around the Bend</option>
+                <option value="kabara-island">Kabara Island</option>
                 <option value="keep-cool">Keep Cool</option>
                 <option value="keep-it-simple">Keep it Simple</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
@@ -1515,6 +1518,7 @@
                 <option value="magic-island">Magic Island</option>
                 <option value="magic-square">Magic Square</option>
                 <option value="magnificent-symbol">Magnificent Symbol</option>
+                <option value="makogai-island">Makogai Island</option>
                 <option value="mamanuca-islands">Mamanuca Islands</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
                 <option value="manchester-city">Manchester City</option>
