--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="css/calendar.adriatic-stars.css">
     <link rel="stylesheet" href="css/calendar.a-foraging-trip.css">
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
+    <link rel="stylesheet" href="css/calendar.after-the-rain.css">
     <link rel="stylesheet" href="css/calendar.a-good-chapter.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
     <link rel="stylesheet" href="css/calendar.a-great-experience.css">
@@ -1088,6 +1089,7 @@
                 <option value="adriatic-stars">Adriatic Stars</option>
                 <option value="a-foraging-trip">A Foraging Trip</option>
                 <option value="a-forward-move">A Forward Move</option>
+                <option value="after-the-rain">After the Rain</option>
                 <option value="a-good-chapter">A Good Chapter</option>
                 <option value="a-good-idea">A Good Idea</option>
                 <option value="a-great-experience">A Great Experience</option>
