--- a/index.html
+++ b/index.html
@@ -781,6 +781,7 @@
     <link rel="stylesheet" href="css/calendar.time-to-chill.css">
     <link rel="stylesheet" href="css/calendar.tokoriki-island.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
+    <link rel="stylesheet" href="css/calendar.tokyo-skytree.css">
     <link rel="stylesheet" href="css/calendar.too-beautiful-to-be-true.css">
     <link rel="stylesheet" href="css/calendar.toronto-raptors.css">
     <link rel="stylesheet" href="css/calendar.totoya-island.css">
@@ -1839,6 +1840,7 @@
                 <option value="time-to-chill">Time to Chill</option>
                 <option value="tokoriki-island">Tokoriki Island</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
+                <option value="tokyo-skytree">Tokyo Skytree</option>
                 <option value="too-beautiful-to-be-true">Too Beautiful to be True</option>
                 <option value="toronto-raptors">Toronto Raptors</option>
                 <option value="totoya-island">Totoya Island</option>
