--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <link rel="stylesheet" href="css/calendar.a-king-of-stone.css">
     <link rel="stylesheet" href="css/calendar.alaska-glacial-water.css">
     <link rel="stylesheet" href="css/calendar.alaska-highway.css">
+    <link rel="stylesheet" href="css/calendar.all-in-one.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
@@ -1099,6 +1100,7 @@
                 <option value="a-king-of-stone">A King of Stone</option>
                 <option value="alaska-glacial-water">Alaska Glacial Water</option>
                 <option value="alaska-highway">Alaska Highway</option>
+                <option value="all-in-one">All in One</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alone-in-paradise">Alone in Paradise</option>
                 <option value="a-lovely-day">A Lovely Day</option>
