--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
     <link rel="stylesheet" href="css/calendar.dream-islands.css">
     <link rel="stylesheet" href="css/calendar.dream-lagoon.css">
     <link rel="stylesheet" href="css/calendar.dust-in-the-wind.css">
+    <link rel="stylesheet" href="css/calendar.eagle-above-the-storm.css">
     <link rel="stylesheet" href="css/calendar.eagle-beach-aruba.css">
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-river.css">
@@ -1325,6 +1326,7 @@
                 <option value="dream-islands">Dream Islands</option>
                 <option value="dream-lagoon">Dream Lagoon</option>
                 <option value="dust-in-the-wind">Dust in the Wind</option>
+                <option value="eagle-above-the-storm">Eagle Above the Storm</option>
                 <option value="eagle-beach-aruba">Eagle Beach Aruba</option>
                 <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-river">Eagle River</option>
