--- a/index.html
+++ b/index.html
@@ -807,6 +807,7 @@
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.urban-jungle.css">
     <link rel="stylesheet" href="css/calendar.vacation-beach.css">
+    <link rel="stylesheet" href="css/calendar.vatoa-island.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
@@ -1868,6 +1869,7 @@
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="urban-jungle">Urban Jungle</option>
                 <option value="vacation-beach">Vacation Beach</option>
+                <option value="vatoa-island">Vatoa Island</option>
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
