--- a/index.html
+++ b/index.html
@@ -728,6 +728,7 @@
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.take-me-to-summer.css">
     <link rel="stylesheet" href="css/calendar.taste-of-victory.css">
+    <link rel="stylesheet" href="css/calendar.tavewa-island.css">
     <link rel="stylesheet" href="css/calendar.tea-garden.css">
     <link rel="stylesheet" href="css/calendar.tech-innovator.css">
     <link rel="stylesheet" href="css/calendar.technological-future.css">
@@ -1789,6 +1790,7 @@
                 <option value="tactical-command">Tactical Command</option>
                 <option value="take-me-to-summer">Take Me to Summer</option>
                 <option value="taste-of-victory">Taste of Victory</option>
+                <option value="tavewa-island">Tavewa Island</option>
                 <option value="tea-garden">Tea Garden</option>
                 <option value="tech-innovator">Tech Innovator</option>
                 <option value="technological-future">Technological Future</option>
