--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
     <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
     <link rel="stylesheet" href="css/calendar.king-of-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.koro-island.css">
+    <link rel="stylesheet" href="css/calendar.kuata-island.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.lakeba-island.css">
     <link rel="stylesheet" href="css/calendar.land-of-dreams.css">
@@ -1490,6 +1491,7 @@
                 <option value="kingdom-of-britain">Kingdom of Britain</option>
                 <option value="king-of-the-jungle">King of the Jungle</option>
                 <option value="koro-island">Koro Island</option>
+                <option value="kuata-island">Kuata Island</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="lakeba-island">Lakeba Island</option>
                 <option value="lake-mcdonald">Lake McDonald</option>
