--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.game-changer.css">
     <link rel="stylesheet" href="css/calendar.games-are-fun.css">
+    <link rel="stylesheet" href="css/calendar.gau-island.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.global-impact.css">
@@ -1391,6 +1392,7 @@
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="game-changer">Game Changer</option>
                 <option value="games-are-fun">Games are Fun</option>
+                <option value="gau-island">Gau Island</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
