--- a/index.html
+++ b/index.html
@@ -837,6 +837,7 @@
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
     <link rel="stylesheet" href="css/calendar.wild-tropics.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
+    <link rel="stylesheet" href="css/calendar.winds-of-the-60th-parallel.css">
     <link rel="stylesheet" href="css/calendar.winter-trails.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
@@ -1902,6 +1903,7 @@
                 <option value="wild-rose">Wild Rose</option>
                 <option value="wild-tropics">Wild Tropics</option>
                 <option value="wild-wonders">Wild Wonders</option>
+                <option value="winds-of-the-60th-parallel">Winds of the 60th Parallel</option>
                 <option value="winter-trails">Winter Trails</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
