--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@
     <link rel="stylesheet" href="css/calendar.park-avenue-new-york.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
+    <link rel="stylesheet" href="css/calendar.penguins-of-the-60th-parallel.css">
     <link rel="stylesheet" href="css/calendar.perfect-afternoon.css">
     <link rel="stylesheet" href="css/calendar.perfect-level.css">
     <link rel="stylesheet" href="css/calendar.perfect-world.css">
@@ -1647,6 +1648,7 @@
                 <option value="park-avenue-new-york">Park Avenue New York</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
+                <option value="penguins-of-the-60th-parallel">Penguins of the 60th Parallel</option>
                 <option value="perfect-afternoon">Perfect Afternoon</option>
                 <option value="perfect-level">Perfect Level</option>
                 <option value="perfect-world">Perfect World</option>
