--- a/index.html
+++ b/index.html
@@ -532,6 +532,7 @@
     <link rel="stylesheet" href="css/calendar.night-ninja.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
     <link rel="stylesheet" href="css/calendar.ninety-nine-nights.css">
+    <link rel="stylesheet" href="css/calendar.no-daylight-between-us.css">
     <link rel="stylesheet" href="css/calendar.no-place-like-home.css">
     <link rel="stylesheet" href="css/calendar.northern-lights.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
@@ -1598,6 +1599,7 @@
                 <option value="night-ninja">Night Ninja</option>
                 <option value="night-sky">Night Sky</option>
                 <option value="ninety-nine-nights">99 Nights</option>
+                <option value="no-daylight-between-us">No Daylight between us</option>
                 <option value="no-place-like-home">No Place like Home</option>
                 <option value="northern-lights">Northern Lights</option>
                 <option value="northern-nights">Northern Nights</option>
