--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
+    <link rel="stylesheet" href="css/calendar.above-the-clouds.css">
     <link rel="stylesheet" href="css/calendar.a-bright-future.css">
     <link rel="stylesheet" href="css/calendar.a-brilliant-mind.css">
     <link rel="stylesheet" href="css/calendar.action-time.css">
@@ -851,7 +852,7 @@
     <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-guess.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
-    
+
     <!-- Custom Styles -->
     <style>
         /* General Styles */
@@ -1087,6 +1088,7 @@
                 Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
+                <option value="above-the-clouds">Above the Clouds</option>
                 <option value="a-bright-future">A Bright Future</option>
                 <option value="a-brilliant-mind">A Brilliant Mind</option>
                 <option value="action-time">Action Time</option>
@@ -1313,7 +1315,7 @@
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="domino-dancing">Domino Dancing</option>
                 <option value="do-something-great">Do Something Great</option>
-                 <option value="domino-effect">Domino Effect</option>
+                <option value="domino-effect">Domino Effect</option>
                 <option value="doterra-black">DōTERRA Black</option>
                 <option value="doterra-colors">DōTERRA Colors</option>
                 <option value="doterra-gold">DōTERRA Gold</option>
@@ -1919,7 +1921,7 @@
                 <option value="your-wildest-dreams">Your Wildest Dreams</option>
                 <option value="your-wildest-guess">Your Wildest Guess</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
-                
+
             </select>
         </div>
 
@@ -1949,7 +1951,7 @@
         </div>
 
         <footer>
-            <p>Developed by Sergey Reizman - © 2025</p>
+            <p>Developed by Sergey Reizman - © 2026</p>
             <a href="https://my.israelgives.org/en/fundme/Interactive_Calendar" target="_blank">
                 <button
                     style="background:#4d73ee; color:white; padding:10px 20px; border:none; border-radius:8px; font-size:16px; cursor:pointer;">
