--- a/index.html
+++ b/index.html
@@ -803,6 +803,7 @@
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
+    <link rel="stylesheet" href="css/calendar.two-shades-of-yellow.css">
     <link rel="stylesheet" href="css/calendar.under-the-sun.css">
     <link rel="stylesheet" href="css/calendar.underwater-life.css">
     <link rel="stylesheet" href="css/calendar.unexpected-layout.css">
@@ -1872,6 +1873,7 @@
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="turquoise-frontier">Turquoise Frontier</option>
                 <option value="twilight-garden">Twilight Garden</option>
+                <option value="two-shades-of-yellow">Two Shades of Yellow</option>
                 <option value="under-the-sun">Under the Sun</option>
                 <option value="underwater-life">Underwater Life</option>
                 <option value="unexpected-layout">Unexpected Layout</option>
