--- a/index.html
+++ b/index.html
@@ -775,6 +775,7 @@
     <link rel="stylesheet" href="css/calendar.the-prince-of-monaco.css">
     <link rel="stylesheet" href="css/calendar.the-real-luxury.css">
     <link rel="stylesheet" href="css/calendar.the-red-city.css">
+    <link rel="stylesheet" href="css/calendar.the-right-shade-of-yellow.css">
     <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
     <link rel="stylesheet" href="css/calendar.the-state-of-hawaii.css">
@@ -1844,6 +1845,7 @@
                 <option value="the-prince-of-monaco">The Prince of Monaco</option>
                 <option value="the-real-luxury">The Real Luxury</option>
                 <option value="the-red-city">The Red City</option>
+                <option value="the-right-shade-of-yellow">The Right Shade of Yellow</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="the-silver-sword">The Silver Sword</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
