--- a/index.html
+++ b/index.html
@@ -405,6 +405,7 @@
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.in-the-mountains.css">
     <link rel="stylesheet" href="css/calendar.in-the-raspberry-dawn.css">
+    <link rel="stylesheet" href="css/calendar.in-the-shade-of-green.css">
     <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
@@ -1477,6 +1478,7 @@
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="in-the-mountains">In the Mountains</option>
                 <option value="in-the-raspberry-dawn">In the Raspberry Dawn</option>
+                <option value="in-the-shade-of-green">In the Shade of Green</option>
                 <option value="into-the-jungle">Into the Jungle</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="invincible-zone">Invincible Zone</option>
