--- a/index.html
+++ b/index.html
@@ -597,6 +597,7 @@
     <link rel="stylesheet" href="css/calendar.planet-of-robots.css">
     <link rel="stylesheet" href="css/calendar.point-nemo.css">
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
+    <link rel="stylesheet" href="css/calendar.polar-star.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.positive-attitude.css">
@@ -1668,6 +1669,7 @@
                 <option value="planet-of-robots">Planet of Robots</option>
                 <option value="point-nemo">Point Nemo</option>
                 <option value="polar-bear">Polar Bear</option>
+                <option value="polar-star">Polar Star</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
                 <option value="positive-attitude">Positive Attitude</option>
