--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
     <link rel="stylesheet" href="css/calendar.on-a-roll.css">
     <link rel="stylesheet" href="css/calendar.once-in-a-lifetime.css">
     <link rel="stylesheet" href="css/calendar.one-dream.css">
+    <link rel="stylesheet" href="css/calendar.one-point-of-reference.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
     <link rel="stylesheet" href="css/calendar.one-step-at-a-time.css">
     <link rel="stylesheet" href="css/calendar.one-way-ticket.css">
@@ -1632,6 +1633,7 @@
                 <option value="on-a-roll">On a Roll</option>
                 <option value="once-in-a-lifetime">Once-in-a-Lifetime</option>
                 <option value="one-dream">One Dream</option>
+                <option value="one-point-of-reference">One Point of Reference</option>
                 <option value="one-step-ahead">One Step Ahead</option>
                 <option value="one-step-at-a-time">One Step at a Time</option>
                 <option value="one-way-ticket">One-Way Ticket</option>
