--- a/index.html
+++ b/index.html
@@ -754,6 +754,7 @@
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-deepest-point.css">
     <link rel="stylesheet" href="css/calendar.the-desert-line.css">
+    <link rel="stylesheet" href="css/calendar.the-distant-island.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-final-match.css">
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
@@ -1827,6 +1828,7 @@
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-deepest-point">The Deepest Point</option>
                 <option value="the-desert-line">The Desert Line</option>
+                <option value="the-distant-island">The Distant Island</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-final-match">The Final Match</option>
                 <option value="the-final-step">The Final Step</option>
