--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
     <link rel="stylesheet" href="css/calendar.antarctic-expedition.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
+    <link rel="stylesheet" href="css/calendar.antarctic-sun.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.apple-in-honey.css">
     <link rel="stylesheet" href="css/calendar.aqua-marina.css">
@@ -1133,6 +1134,7 @@
                 <option value="a-new-opportunity">A New Opportunity</option>
                 <option value="antarctic-expedition">Antarctic Expedition</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
+                <option value="antarctic-sun">Antarctic Sun</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="apple-in-honey">Apple in Honey</option>
                 <option value="aqua-marina">Aqua Marina</option>
