--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.kingdom-of-britain.css">
     <link rel="stylesheet" href="css/calendar.king-of-the-jungle.css">
+    <link rel="stylesheet" href="css/calendar.kookaburra.css">
     <link rel="stylesheet" href="css/calendar.koro-island.css">
     <link rel="stylesheet" href="css/calendar.kuata-island.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
@@ -1507,6 +1508,7 @@
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="kingdom-of-britain">Kingdom of Britain</option>
                 <option value="king-of-the-jungle">King of the Jungle</option>
+                <option value="kookaburra">Kookaburra</option>
                 <option value="koro-island">Koro Island</option>
                 <option value="kuata-island">Kuata Island</option>
                 <option value="lady-blue">Lady Blue</option>
