--- a/index.html
+++ b/index.html
@@ -522,6 +522,7 @@
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
+    <link rel="stylesheet" href="css/calendar.new-island.css">
     <link rel="stylesheet" href="css/calendar.new-millenium.css">
     <link rel="stylesheet" href="css/calendar.new-mission.css">
     <link rel="stylesheet" href="css/calendar.new-strategy.css">
@@ -1599,6 +1600,8 @@
                 <option value="natural-wonders">Natural Wonders</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
+                <option value="new-black">New Black</option>
+                <option value="new-island">New Island</option>
                 <option value="new-millenium">New Millenium</option>
                 <option value="new-mission">New Mission</option>
                 <option value="new-strategy">New Strategy</option>
