--- a/index.html
+++ b/index.html
@@ -727,6 +727,7 @@
     <link rel="stylesheet" href="css/calendar.sunflower-fields.css">
     <link rel="stylesheet" href="css/calendar.sunny-beach.css">
     <link rel="stylesheet" href="css/calendar.sunny-garden.css">
+    <link rel="stylesheet" href="css/calendar.sunrise-glow-of-patagonia.css">
     <link rel="stylesheet" href="css/calendar.sunrise-over-the-ocean.css">
     <link rel="stylesheet" href="css/calendar.sunset-beach.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
@@ -1806,6 +1807,7 @@
                 <option value="sunflower-fields">Sunflower Fields</option>
                 <option value="sunny-beach">Sunny Beach</option>
                 <option value="sunny-garden">Sunny Garden</option>
+                <option value="sunrise-glow-of-patagonia">Sunrise Glow of Patagonia</option>
                 <option value="sunrise-over-the-ocean">Sunrise over the Ocean</option>
                 <option value="sunset-beach">Sunset Beach</option>
                 <option value="sunset-magic">Sunset Magic</option>
