--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
+    <link rel="stylesheet" href="css/calendar.black-limpopo.css">
     <link rel="stylesheet" href="css/calendar.black-magic.css">
     <link rel="stylesheet" href="css/calendar.black-mountain.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
@@ -1191,6 +1192,7 @@
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
+                <option value="black-limpopo">Black Limpopo</option>
                 <option value="black-magic">Black Magic</option>
                 <option value="black-mountain">Black Mountain</option>
                 <option value="black-orange">Black & Orange</option>
