--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.green-heaven.css">
+    <link rel="stylesheet" href="css/calendar.green-is-good.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.green-light.css">
     <link rel="stylesheet" href="css/calendar.green-ocean.css">
@@ -1442,6 +1443,7 @@
                 <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="green-heaven">Green Heaven</option>
+                <option value="green-is-good">Green is Good</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="green-light">Green Light</option>
                 <option value="green-ocean">Green Ocean</option>
