--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
     <link rel="stylesheet" href="css/calendar.central-division.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.chicago-bulls.css">
+    <link rel="stylesheet" href="css/calendar.chinese-mandarin-orange.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.citrus-blaze.css">
     <link rel="stylesheet" href="css/calendar.city-of-angels.css">
@@ -1258,6 +1259,7 @@
                 <option value="central-division">Central Division</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="chicago-bulls">Chicago Bulls</option>
+                <option value="chinese-mandarin-orange">Chinese Mandarin Orange</option>
                 <option value="core">Choose Layout Mode</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="citrus-blaze">Citrus Blaze</option>
